# classic-wallpaper

./: .gitignore  README.md  desktopwallpaper.html  desktopwallpaper.py  imageformat.html  imageformat.py  pixeltovector.md  randomwp.py  uielements.md
docs/: pixeltovector.md  uielements.md
palettes/: 16color.aco  16color.ase  16color.gpl  16gray.aco  16gray.ase  16gray.gpl  16gray.pal  256gray.aco  256gray.ase  256gray.gpl  256gray.pal  2color.aco  2color.ase  2color.gpl  2color.pal  3gray.aco  3gray.ase  3gray.gpl  3gray.pal  4gray.aco  4gray.ase  4gray.gpl  4gray.pal  64gray.aco  64gray.ase  64gray.gpl  64gray.pal  6gray.aco  6gray.ase  6gray.gpl  6gray.pal  cga-canonical.aco  cga-canonical.ase  cga-canonical.gpl  cga-canonical.pal  cga-with-halfmixtures.aco  cga-with-halfmixtures.ase  cga-with-halfmixtures.gpl  cga-with-halfmixtures.pal  ega.aco  (+27 more)
rust/: Cargo.toml  README.md
rust/app/: Cargo.toml
rust/app/src/: main.rs
rust/desktopwallpaper/: Cargo.toml
rust/desktopwallpaper/src/: imageop.rs  lib.rs  parfor.rs  random.rs  randomwp.rs  writepng.rs  writeppm.rs  writers.rs
rust/run-wasm/: Cargo.toml
rust/src/: basicrgbimage.rs  imageop.rs  main.rs  parfor.rs  randomwp.rs  writers.rs
